Fix item pane collapse size

--- a/scss/elements/_itemPane.scss
+++ b/scss/elements/_itemPane.scss
@@ -6,11 +6,22 @@ item-pane {
 		min-width: $width-sidenav;
 		min-height: $width-sidenav;
 		max-width: $width-sidenav;
+
+		&[view-type=note] {
+			min-width: 0;
+			width: 0px !important;
+		}
+
 		visibility: inherit;
 
 		&.stacked {
 			max-width: unset;
 			max-height: $width-sidenav;
+
+			&[view-type=note] {
+				min-height: 0;
+				height: 0px !important;
+			}
 		}
 
 		#zotero-item-pane-content {
